# OpenGeode.geode

./: .eslintrc.js  .gitignore  .releaserc  COPYLEFT  README.md  config.unix.json  config.win.json  package-lock.json  package.js  package.json  pip.js  vue.config.js
.github/workflows/: CD.yml  CI.yml
server/: CMakeLists.txt  README.md  requirements.in  requirements.txt
server/bindings/python/: CMakeLists.txt  __init__.py  model.py  requirements.txt  setup.py
server/bindings/python/src/: CMakeLists.txt
server/bindings/python/src/mesh/: CMakeLists.txt  edged_curve.h  mesh.cpp  point_set.h  solid.h  surface.h
server/bindings/python/src/model/: CMakeLists.txt  brep.h  model.cpp  section.h
server/cmake/: ConfigureOpenGeode_geode.cmake  ConfigureVtk.cmake  OpenGeode_geode.cmake  OpenGeode_geodeConfig.cmake.in  SuperBuild.cmake
server/include/geode/opengeode/mesh/: common.h  edged_curve.h  point_set.h  solid.h  surface.h
server/include/geode/opengeode/mesh/detail/: geode_points.h  vtk_xml.h
server/include/geode/opengeode/model/: brep.h  common.h  section.h
server/include/geode/opengeode/model/private/: extract_lines.h
server/protocols/: geode_mesh.py  geode_model.py  geode_mouse.py  geode_protocols.py  geode_ui.py  opengeode.py  opengeode_protocols.py
server/src/geode/: CMakeLists.txt
server/src/geode/opengeode/mesh/: CMakeLists.txt  common.cpp  edged_curve.cpp  point_set.cpp  solid.cpp  surface.cpp
server/src/geode/opengeode/model/: CMakeLists.txt  brep.cpp  common.cpp  section.cpp
src/: main.js
src/basic/: index.js
src/components/: ContextualItem.vue
src/mesh/: index.js  store.js
src/mesh/components/: Clip.vue  EdgedCurvePointsColor.vue  EdgedCurvePointsSize.vue  LogoPointSet.vue  PointSetColor.vue  PointSetSize.vue  SurfaceColor.vue  SurfaceMesh.vue  Test.vue
src/model/: brep_menu.js  index.js  store.js
src/model/components/: CornersColor.vue  CornersSize.vue  LinesColor.vue  SurfacesColor.vue  SurfacesMesh.vue  ToggleCorners.vue  ToggleLines.vue  ToggleSurfaces.vue
